--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LuxOS 8-bit Emulator</title>
     <style>
+        @import url('https://cdn.jsdelivr.net/gh/naver/d2codingfont/d2coding-regular-ligature-round.css');
+
         body {
             background-color: black;
             color: green;
-            font-family: monospace;
+            font-family: 'D2Coding', monospace;
             margin: 0;
             display: flex;
             flex-direction: column;
