--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LuxOS 8-bit Emulator</title>
     <style>
-        @import url('https://cdn.jsdelivr.net/gh/naver/d2codingfont/d2coding-regular-ligature-round.css');
+        @font-face {
+            font-family: 'DungGeunMo';
+            src: url('DungGeunMo.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
 
         body {
             background-color: black;
             color: green;
-            font-family: 'D2Coding', monospace;
+            font-family: 'DungGeunMo', monospace;
             margin: 0;
             display: flex;
             flex-direction: column;
