--- a/index.html
+++ b/index.html
@@ -3,55 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LuxOS 8-bit Emulator</title>
+    <title>LuxOS* HyperDisk 1.0 Emulator</title>
     <style>
-        @font-face {
-            font-family: 'DungGeunMo';
-            src: url('DungGeunMo.woff') format('woff');
-            font-weight: normal;
-            font-style: normal;
-        }
-
         body {
             background-color: black;
             color: green;
-            font-family: 'DungGeunMo', monospace;
+            font-family: monospace;
             margin: 0;
+            padding: 0;
             display: flex;
             flex-direction: column;
             height: 100vh;
         }
-
-        #screen {
+        #output {
             flex: 1;
             overflow-y: auto;
             padding: 10px;
             white-space: pre-wrap;
+            border-bottom: 2px solid green;
         }
-
+        #input-section {
+            display: flex;
+            padding: 10px;
+            background-color: #202020;
+        }
         #input {
+            flex: 1;
             border: none;
-            background: black;
+            background: #202020;
             color: green;
-            font-size: 1rem;
+            font-size: 16px;
             padding: 10px;
             outline: none;
-            caret-color: white;
-        }
-
-        #input::placeholder {
-            color: darkgreen;
         }
     </style>
 </head>
 <body>
-    <!-- LuxOS 화면 -->
-    <div id="screen"></div>
-
-    <!-- 명령 입력 필드 -->
-    <input type="text" id="input" autofocus placeholder="Type a command here...">
-    
-    <!-- JavaScript 파일 연결 -->
+    <div id="output">Welcome to LuxOS* with HyperDisk 1.0\nType 'help' for a list of commands.\n</div>
+    <div id="input-section">
+        <input type="text" id="input" placeholder="Type a command here...">
+    </div>
     <script src="luxos.js"></script>
 </body>
 </html>
