--- a/index.html
+++ b/index.html
@@ -15,34 +15,32 @@
             flex-direction: column;
             height: 100vh;
         }
-        #output {
+        #terminal {
             flex: 1;
             overflow-y: auto;
             padding: 10px;
             white-space: pre-wrap;
-            border-bottom: 2px solid green;
-        }
-        #input-section {
             display: flex;
-            padding: 10px;
-            background-color: #202020;
+            flex-direction: column;
+            gap: 5px;
         }
         #input {
-            flex: 1;
             border: none;
-            background: #202020;
+            background: black;
             color: green;
             font-size: 16px;
             padding: 10px;
             outline: none;
+            flex-shrink: 0;
         }
     </style>
 </head>
 <body>
-    <div id="output">Welcome to LuxOS* with HyperDisk 1.0\nType 'help' for a list of commands.\n</div>
-    <div id="input-section">
-        <input type="text" id="input" placeholder="Type a command here...">
+    <div id="terminal">
+        Welcome to LuxOS* with HyperDisk 1.0
+        Type 'help' for a list of commands.
     </div>
+    <input type="text" id="input" placeholder="Type a command here...">
     <script src="luxos.js"></script>
 </body>
 </html>
